@@ -1,6 +1,8 @@
 CAWeb 1.12.0
 - Updated build process to better align with upcoming CAWeb projects
 - Updated State Template 6.3.2 to new modified by version
+- Removed caweb-admin.js from loading on login screen
+- Resolved issue with header/footer causing Events Calendar Pro to stop working when used as a widget
 
 CAWeb 1.11.3a
 - Increased admin_bar_menu priority due to 6.6.1 increase
